system/ingress/jobster.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobster-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5g"
  namespace: jobster
spec:
  tls:
  - hosts:
    - jobster.francois-egner.de
    - argocd.francois-egner.de
    secretName: api-tls
  ingressClassName: nginx
  rules:
  - host: jobster.francois-egner.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restapi-internal-service
            port:
              number: 3333
